better push those changes

--- a/day2.ipynb
+++ b/day2.ipynb
@@ -24,6 +24,9 @@
     }
    ],
    "source": [
+    "f= open('./day2/input.txt')\n",
+    "lines = f.readlines()\n",
+    "\n",
     "total = 0 \n",
     "for line in lines:\n",
     "    parts = line.split(' ')\n",
@@ -40,11 +43,7 @@
     "            \n",
     "    if pos<=amax and pos >= amin:\n",
     "        total+=1\n",
-    "        #print('valid')\n",
-    "        #print(amin,amax)\n",
-    "        #print(c,password)\n",
-    "        #print(line)\n",
-    "        #print('')\n",
+    "\n",
     "\n",
     "print(total)"
    ]
