--- a/day4.ipynb
+++ b/day4.ipynb
@@ -606,6 +606,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df['byr_valid'] = (df['byr'].astype(float).between(1920,2002)) & (df['byr'].str.len() == 4) & (df['byr'].str.isdigit())\n",
+    "df['iyr_valid'] = (df['iyr'].astype(float).between(2010,2020)) & (df['iyr'].str.len() == 4) & (df['iyr'].str.isdigit())\n",
+    "df['eyr_valid'] = (df['eyr'].astype(float).between(2020,2030)) & (df['eyr'].str.len() == 4) & (df['eyr'].str.isdigit())\n",
+    "\n",
     "cms = df['hgt'].fillna('').str.contains('cm')\n",
     "cmlen = df[cms]['hgt'].str.replace('cm','').astype('float')\n",
     "\n",
