--- a/day16.ipynb
+++ b/day16.ipynb
@@ -415,9 +415,9 @@
     "fields_order = ['' for _ in range(len(fields))]\n",
     "  \n",
     "while any(not field for field in fields_order):\n",
-    "    pos = next(pos for pos, potential_vaules in posscol.items() if len(potential_vaules) == 1)\n",
+    "    pos = next(pos for pos, potential_values in posscol.items() if len(potential_values) == 1)\n",
     "    value = posscol[pos].pop()\n",
-    "    for potential_vaules in posscol.values():\n",
+    "    for potential_values in posscol.values():\n",
     "        if value in potential_vaules:\n",
     "            potential_vaules.remove(value)\n",
     "    fields_order[pos] = value"
